<resources>
    <string name="title">회원가입</string>
    
    <string name="name">이름</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="password_check">비밀번호 확인</string>

    <string name="name_hint">이름(닉네임)을 입력해주세요</string>
    <string name="email_hint">이메일을 입력해주세요</string>
    <string name="password_hint">비밀번호를 입력해주세요</string>
    <string name="password_check_hint">비밀번호를 다시 입력해주세요</string>

    <string name="name_error">2자 이상, 10자 이하로 입력해주세요.</string>
    <string name="password_error">8자 이상, 20자 이하로 입력해주세요</string>
    <string name="email_error">올바른 이메일 주소를 입력해주세요</string>
    <string name="email_error_registered">이미 존재하는 이메일입니다</string>
    <string name="password_check_error">입력하신 비밀번호가 일치하지 않습니다</string>

    <string name="submit">완료</string>
</resources>
