<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignUpActivity">

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="?android:attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/frame_close"
            android:layout_width="48dp"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toTopOf="@+id/view">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:src="@drawable/ic_arrow_left" />

        </FrameLayout>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="22dp"
            android:layout_marginTop="10dp"
            android:text="@string/title"
            android:textAppearance="@style/Typography.H1.Bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Typography.Body2.Bold"
            android:layout_marginTop="36dp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_name"
            style="@style/SikdorokTextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_marginTop="7dp"
            android:layout_marginHorizontal="20dp"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_name"
                android:singleLine="true"
                android:maxLength="13"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_hint" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/tv_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textAppearance="@style/Typography.Body2.Bold"
            android:layout_marginTop="21dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_name" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_email"
            style="@style/SikdorokTextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_marginTop="7dp"
            android:layout_marginHorizontal="20dp"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:maxLines="1"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/tv_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textAppearance="@style/Typography.Body2.Bold"
            android:layout_marginTop="21dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_email" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_password"
            style="@style/SikdorokTextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginHorizontal="20dp"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_password"
                android:singleLine="true"
                android:maxLines="1"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/tv_password_check"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textAppearance="@style/Typography.Body2.Bold"
            android:layout_marginTop="21dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_password_check"
            style="@style/SikdorokTextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_marginTop="7dp"
            android:layout_marginHorizontal="20dp"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_password_check">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_password_check"
                android:singleLine="true"
                android:maxLines="1"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/tv_submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:paddingVertical="14dp"
            android:enabled="false"
            android:background="@drawable/enable_button_bg"
            android:textColor="@color/enable_button_text_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_password_check"
            app:layout_constraintVertical_bias="1" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
